2012-03-10 Borut Razem <borut.razem AT gmail.com>

	* doc/README.txt, doc/sdccman.lyx:
	  backslashes replaced with slashes in non-free paths;
	  obsoleted special sdcc keywords which are not preceded
	  by a double underscore

2012-03-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed bug #3501019.

2012-03-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genCast): fixed bug #3486542
	* support/regression/tests/gcc-torture-execute-pr15296.c: re-enabled

2012-03-09 Borut Razem <borut.razem AT gmail.com>

	* doc/README.txt:
	  added info about included code from gcc test suite
	* Makefile.in:
	  replaced test -e with -f, since -e is not available in sh
	  on Solaris

2012-03-08 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Use 16-bit addition instructions for 8-bit additions when cheaper and possible.

2012-03-07 Borut Razem <borut.razem AT gmail.com>

	* Makefile.in: copy correct sdbinutils executables to bin

2012-03-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCopt.c (getAddrspaceiCode),
	  src/SDCCralloc.hpp (create_cfg): properly handle IFX and
	  JUMPTABLE operands

2012-03-06 Borut Razem <borut.razem AT gmail.com>

	* Makefile.in, support/sdbinutils/binutils/Makefile.am,
	  support/sdbinutils/binutils/Makefile.in,
	  support/scripts/sdcc.nsi,
	  support/sdbinutils/bfd/asxxxx.c,
	  support/sdbinutils/binutils/nm.c:
	  added sdnm sdbinutils utility

2012-03-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed bug #3496508.

2012-03-05 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCicode.c:
	  disable -O2 optimization for gcc 4.6.3, see bug #3285611
	* support/scripts/sdcc_mingw32: minor cosmetical fix
	* configure.in, configure, config.guess, config.sub:
	  added host and build type detection
	* device/lib/pic14/Makefile.in,
	  device/lib/pic14/libm/Makefile.in: regenerated
