@@ -7,13 +7,18 @@ use strict;
 
 # License:
 #
-# SDCC is licensed under the GNU Public license (GPL) v2.  Note that
+# SDCC is licensed under the GNU Public license (GPL) v2. Note that
 # this license covers the code to the compiler and other executables,
 # but explicitly does not cover any code or objects generated by sdcc.
-# We have not yet decided on a license for the run time libraries, but
-# it will not put any requirements on code linked against it. See:
 #
-# http://www.gnu.org/copyleft/gpl.html
+# For pic device libraries and header files which are derived from
+# Microchip header (.inc) and linker script (.lkr) files Microchip
+# requires that "The header files should state that they are only to be
+# used with authentic Microchip devices" which makes them incompatible
+# with the GPL. Pic device libraries and header files are located at
+# non-free/lib and non-free/include directories respectively.
+# Sdcc should be run with the --use-non-free command line option in
+# order to include non-free header files and libraries.
 #
 # See http://sdcc.sourceforge.net/ for the latest information on sdcc.
 
@@ -438,13 +443,18 @@ $header .= <<EOT;
 //
 //\tCopyright (c) 2002, Kevin L. Pauba, All Rights Reserved
 //
-//\tSDCC is licensed under the GNU Public license (GPL) v2.  Note that
+//\tSDCC is licensed under the GNU Public license (GPL) v2. Note that
 //\tthis license covers the code to the compiler and other executables,
 //\tbut explicitly does not cover any code or objects generated by sdcc.
-//\tWe have not yet decided on a license for the run time libraries, but
-//\tit will not put any requirements on code linked against it. See:
-// 
-//\thttp://www.gnu.org/copyleft/gpl/html
+//
+//\tFor pic device libraries and header files which are derived from
+//\tMicrochip header (.inc) and linker script (.lkr) files Microchip
+//\trequires that "The header files should state that they are only to be
+//\tused with authentic Microchip devices" which makes them incompatible
+//\twith the GPL. Pic device libraries and header files are located at
+//\tnon-free/lib and non-free/include directories respectively.
+//\tSdcc should be run with the --use-non-free command line option in
+//\torder to include non-free header files and libraries.
 //
 //\tSee http://sdcc.sourceforge.net/ for the latest information on sdcc.
 //
